<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calories_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/prompt_calories"
                        android:hint="@string/prompt_calories"
                        android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fat_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/fat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/prompt_fat"
                        android:hint="@string/prompt_fat"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sodium_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/sodium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/prompt_sodium"
                        android:hint="@string/prompt_sodium"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/carbs_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/carbs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/prompt_carbs"
                        android:hint="@string/prompt_carbs"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sugar_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/sugar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/prompt_sugar"
                        android:hint="@string/prompt_sugar"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/protein_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/protein"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/prompt_protein"
                        android:hint="@string/prompt_protein"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calcium_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/calcium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/prompt_calcium"
                        android:hint="@string/prompt_calcium"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/iron_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/iron"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/prompt_iron"
                        android:hint="@string/prompt_iron"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/potassium_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/potassium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/prompt_potassium"
                        android:hint="@string/prompt_potassium"
                        android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/addNutritionInfo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/add_food_information"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll" />

    <Button
        android:id="@+id/undoPreviousNutritionInfo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/undo_previous_addition"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/addNutritionInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/submit_nutrition_info"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@id/go_to_user_preferences_from_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/undoPreviousNutritionInfo"/>

    <Button
        android:id="@+id/go_to_user_preferences_from_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_to_user_prefs_from_input"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintTop_toBottomOf="@+id/undoPreviousNutritionInfo"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>