<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_age_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="80dp">

        <EditText
        android:id="@+id/enter_age"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_age"
        android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/select_gender"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:spinnerMode="dropdown"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="@id/enter_age_wrapper"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions_for_user_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_on_user_preferences"
        android:width="200dp"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@id/enter_age_wrapper"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"/>

    <ScrollView
        android:id="@+id/user_pref_scroll"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_user_pref"
        app:layout_constraintTop_toBottomOf="@id/instructions_for_user_preferences">

        <LinearLayout
            android:id="@+id/inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fat_pref_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/enter_fat_preference"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/user_fat_pref"
                        android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/carbs_pref_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/enter_carb_preference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_carbs_pref"
                        android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/protein_pref_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/enter_protein_preference"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/user_protein_pref"
                        android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calories_pref_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/enter_calories_preference"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/user_calories_pref"
                        android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sodium_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/enter_sodium_preference"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/user_sodium_pref"
                        android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/iron_pref_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent">

                    <EditText
                        android:id="@+id/enter_iron_preference"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/user_iron_pref"
                        android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_user_pref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_user_pref"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/user_pref_scroll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>